--- a/Random_Forest Analysis.ipynb
+++ b/Random_Forest Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:32:18.226872Z",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:29:41.276272Z",
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:29:49.719623Z",
@@ -41,12 +41,12 @@
    },
    "outputs": [],
    "source": [
-    "data = pd.read_csv('trans_cookies.csv')"
+    "data = pd.read_csv('../00. Data/trans_cookies.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:29:55.823297Z",
@@ -57,10 +57,10 @@
     {
      "data": {
       "text/plain": [
-       "(5138, 17)"
+       "(5138, 14)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:30:03.462304Z",
@@ -84,12 +84,11 @@
       "text/plain": [
        "Index(['sugar to flour ratio', 'sugar index', 'bake temp', 'chill time',\n",
        "       'calories', 'density', 'pH', 'grams baking soda', 'bake time', 'weight',\n",
-       "       'chocolate', 'nuts', 'oats', 'raisins', 'peanut_butter',\n",
-       "       'butter type_melted', 'quality'],\n",
+       "       'chocolate', 'nuts', 'butter type_melted', 'quality'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:30:16.471171Z",
@@ -124,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:31:02.662389Z",
@@ -134,28 +133,18 @@
    "outputs": [],
    "source": [
     "#SMOTE\n",
-    "#from sklearn.model_selection import train_test_split\n",
-    "#X = cookies.drop(columns='quality')\n",
-    "#y = cookies['quality']\n",
-    "#X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
-    "#from imblearn.over_sampling import SMOTE\n",
-    "#sm = SMOTE(k_neighbors=3, random_state=2)\n",
-    "#X_train_res, y_train_res = sm.fit_sample(X_train, y_train.ravel())"
+    "from sklearn.model_selection import train_test_split\n",
+    "X = cookies.drop(columns='quality')\n",
+    "y = cookies['quality']\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)\n",
+    "from imblearn.over_sampling import SMOTE\n",
+    "sm = SMOTE(k_neighbors=3, random_state=2)\n",
+    "X_train_res, y_train_res = sm.fit_sample(X_train, y_train.ravel())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Normal test train\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42, stratify=y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:31:20.231209Z",
@@ -169,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:33:27.670922Z",
@@ -197,7 +186,7 @@
        "            warm_start=False)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:36:37.666803Z",
@@ -223,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:36:38.131406Z",
@@ -239,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:36:39.114998Z",
@@ -254,31 +243,31 @@
       "              precision    recall  f1-score   support\n",
       "\n",
       "           3       0.00      0.00      0.00         1\n",
-      "           4       0.00      0.00      0.00         9\n",
-      "           5       0.69      0.83      0.76       112\n",
-      "           6       0.58      0.55      0.56       121\n",
-      "           7       0.61      0.61      0.61       262\n",
-      "           8       0.62      0.74      0.67       354\n",
-      "           9       0.71      0.45      0.55       141\n",
-      "          10       0.88      0.26      0.40        27\n",
+      "           4       0.09      0.11      0.10         9\n",
+      "           5       0.68      0.81      0.74       112\n",
+      "           6       0.59      0.57      0.58       121\n",
+      "           7       0.60      0.63      0.61       262\n",
+      "           8       0.67      0.61      0.64       354\n",
+      "           9       0.59      0.60      0.60       141\n",
+      "          10       0.45      0.37      0.41        27\n",
       "          11       0.00      0.00      0.00         1\n",
       "\n",
-      "   micro avg       0.63      0.63      0.63      1028\n",
-      "   macro avg       0.45      0.38      0.40      1028\n",
-      "weighted avg       0.63      0.63      0.62      1028\n",
+      "   micro avg       0.62      0.62      0.62      1028\n",
+      "   macro avg       0.41      0.41      0.41      1028\n",
+      "weighted avg       0.62      0.62      0.62      1028\n",
       "\n",
       "---\n",
-      "0.632295719844358\n",
+      "0.6196498054474708\n",
       "---\n",
       "[[  0   0   1   0   0   0   0   0   0]\n",
-      " [  1   0   6   2   0   0   0   0   0]\n",
-      " [  0   0  93  17   2   0   0   0   0]\n",
-      " [  0   0  29  66  18   7   1   0   0]\n",
-      " [  0   0   5  24 159  72   2   0   0]\n",
-      " [  0   0   0   3  72 261  18   0   0]\n",
-      " [  0   0   0   1  10  65  64   1   0]\n",
-      " [  0   0   0   0   0  15   5   7   0]\n",
-      " [  0   0   0   0   0   1   0   0   0]]\n"
+      " [  1   1   5   2   0   0   0   0   0]\n",
+      " [  0   6  91  15   0   0   0   0   0]\n",
+      " [  0   4  31  69  10   7   0   0   0]\n",
+      " [  1   0   5  27 164  57   8   0   0]\n",
+      " [  0   0   0   4  87 217  40   6   0]\n",
+      " [  0   0   0   0  10  41  85   5   0]\n",
+      " [  0   0   0   0   2   4  11  10   0]\n",
+      " [  0   0   0   0   0   0   0   1   0]]\n"
      ]
     },
     {
@@ -300,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2019-04-19T12:42:01.603678Z",
@@ -309,11 +298,11 @@
    },
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/usr/local/lib/python3.7/site-packages/sklearn/model_selection/_split.py:652: Warning: The least populated class in y has only 4 members, which is too few. The minimum number of members in any class cannot be less than n_splits=5.\n",
-      "  % (min_groups, self.n_splits)), Warning)\n"
+      "Best score: 0.9013565435583785\n",
+      "Best parameters: {'n_estimators': 89, 'max_depth': 198, 'class_weight': 'balanced'}\n"
      ]
     }
    ],
@@ -326,7 +315,8 @@
     "\n",
     "# Parameters to try\n",
     "parameter_grid = {'n_estimators': [i for i in range(50, 200)],\n",
-    "                 'class_weight' :['balanced', 'balanced_subsample']}\n",
+    "                 'class_weight' :['balanced', 'balanced_subsample'],\n",
+    "                 'max_depth': [i for i in range(50, 200)]}\n",
     "\n",
     "\n",
     "\n",
@@ -337,9 +327,109 @@
     "                           n_iter=n_iter_search, cv=5)\n",
     "\n",
     "# Fit model with grid_search\n",
-    "random_search.fit(X_train, y_train)\n",
+    "random_search.fit(X_train_res, y_train_res)\n",
     "print('Best score: {}'.format(random_search.best_score_))\n",
     "print('Best parameters: {}'.format(random_search.best_params_))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_model = RandomForestClassifier(n_estimators=89,class_weight='balanced',max_depth=198)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight='balanced',\n",
+       "            criterion='gini', max_depth=198, max_features='auto',\n",
+       "            max_leaf_nodes=None, min_impurity_decrease=0.0,\n",
+       "            min_impurity_split=None, min_samples_leaf=1,\n",
+       "            min_samples_split=2, min_weight_fraction_leaf=0.0,\n",
+       "            n_estimators=89, n_jobs=None, oob_score=False,\n",
+       "            random_state=None, verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_model.fit(X_train_res, y_train_res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = final_model.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           3       0.00      0.00      0.00         1\n",
+      "           4       0.14      0.11      0.12         9\n",
+      "           5       0.72      0.81      0.76       112\n",
+      "           6       0.63      0.64      0.63       121\n",
+      "           7       0.65      0.60      0.62       262\n",
+      "           8       0.65      0.67      0.66       354\n",
+      "           9       0.60      0.60      0.60       141\n",
+      "          10       0.42      0.37      0.39        27\n",
+      "          11       0.00      0.00      0.00         1\n",
+      "\n",
+      "   micro avg       0.64      0.64      0.64      1028\n",
+      "   macro avg       0.42      0.42      0.42      1028\n",
+      "weighted avg       0.63      0.64      0.64      1028\n",
+      "\n",
+      "---\n",
+      "0.6381322957198443\n",
+      "---\n",
+      "[[  0   0   1   0   0   0   0   0   0]\n",
+      " [  1   1   6   1   0   0   0   0   0]\n",
+      " [  0   4  91  15   2   0   0   0   0]\n",
+      " [  0   2  25  77   8   8   1   0   0]\n",
+      " [  0   0   4  28 157  67   5   1   0]\n",
+      " [  0   0   0   2  74 236  38   4   0]\n",
+      " [  0   0   0   0   2  46  84   9   0]\n",
+      " [  0   0   0   0   0   6  11  10   0]\n",
+      " [  0   0   0   0   0   0   1   0   0]]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/lib/python3.7/site-packages/sklearn/metrics/classification.py:1143: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_pred))\n",
+    "print(\"---\")\n",
+    "print(accuracy_score(y_test, y_pred))\n",
+    "print('---')\n",
+    "print(confusion_matrix(y_test, y_pred))"
    ]
   },
   {
